# OTel-query-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config-elastic-test.yaml  config-otel-test.yaml  create-api-key.json  create-enhanced-api-key.json  pyproject.toml  run_server.py  test-elastic-connection.py  test_driver_registry.py  test_otel_collector.py  test_server.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: elastic-cloud-setup.md  local-development.md
examples/: config.yaml  docker-compose.yaml  otel-collector-config.yaml
src/otel_query_server/: __init__.py  cache.py  config.py  models.py  server.py
src/otel_query_server/drivers/: __init__.py  base.py  elastic_cloud.py  otel_collector.py  registry.py
src/otel_query_server/tools/: __init__.py
tests/: __init__.py  conftest.py  utils.py
tests/fixtures/: __init__.py  backend_responses.py
tests/unit/: test_base_driver.py  test_cache.py  test_config.py  test_models.py  test_server.py
